更新个人主页

--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 
 <body>
-    <p>这是克隆实验</p>
+    <div>
+        <p>姓名：付明华</p>
+        <p>头像展示：<img src="./i.jpg" alt=""></p>
+        <p>入学时间：2018-2-23</p>
+        <p>兴趣爱好：敲代码</p>
+        <p>上次月考成绩：84</p>
+        <p>是否重修：否</p>
+        <p>vue的薄弱环节：忘了99%</p>
+        <p>react的薄弱环节：传参</p>
+        <p>是否需要老师特殊照顾：否</p>
+    </div>
 </body>
 
 </html>
